Fix sales flow without changing SaleController contract